#518360 by joshk: Panels node form doesn't have format properly associated.
#525340 by markus_petrux: Dashboard improperly initializing a variable.
#460902 by dmmckenna: Fix problem installing panels from an install profile.
#488278: Preview on panel nodes prior to creation caused errors.
#475920: Create "use panels dashboard" permission to more easily control who can and cannot use it.

Panels 6.x-3.0-beta4
====================
Note: beta3 skipped to stay even with CTools beta numbers.
Removal of non-functioning bulk export module in favor of the new one in CTools.
Update to require CTools API 1.1.0
Updates to work with the new Page Manager UI in CTools.

Panels 6.x-3.0-beta2
====================
Update to require CTools based upon its advertised API version number.
Update code to ensure that the dead 'panels simple cache' module is really dead.
Attempt to go back further in history for a Panels 1 upgrade path.
Fix for making sure Panels completely disables itself if using incompatible version of CTools.
Update CSS caching on panel page and panel context to use ctools_css_store instead of remembering the filename.
Infinite loop protection in panel nodes.
#459078: Provide the "read more" flag for teasers of panel nodes.
Fix broken styling when dragging a panel pane.
Integrate with CTools tab system so we can add edit tabs to all our panel pages.
#454208: pgsql does not support concat(), so use || instead for postgres.
#445828: Remove "Settings" link if a content type has no settings form.
#460200: Allow regions and columns that have only 'fixed' width items. Disallow changing a 'fixed' item to 'fluid.'

Panels 6.x-3.0-beta1
====================

#422712: Panel page import button went to wrong place.
#423288: Profile template plugin had wrong path.
#424176: Panel nodes: Remove unused layout screen, fix some notice errors, give context a description.
New simpler panel page task that doesn't bother with handlers at all.