@@ -28,21 +28,22 @@ function panels_flexible_panels_layouts() {
 function panels_flexible_menu(&$items, &$info) {
   $base = array(
     'access arguments' => array('access content'),
+    'page arguments' => array(4),
     'type' => MENU_CALLBACK,
     'file' => $info['file'],
     'file path' => $info['path'],
   );
 
-  $items['panels/ajax/flexible/settings'] = array(
+  $items['panels/ajax/flexible/settings/%panels_edit_cache'] = array(
     'page callback' => 'panels_ajax_flexible_edit_settings',
   ) + $base;
-  $items['panels/ajax/flexible/add'] = array(
+  $items['panels/ajax/flexible/add/%panels_edit_cache'] = array(
     'page callback' => 'panels_ajax_flexible_edit_add',
   ) + $base;
-  $items['panels/ajax/flexible/remove'] = array(
+  $items['panels/ajax/flexible/remove/%panels_edit_cache'] = array(
     'page callback' => 'panels_ajax_flexible_edit_remove',
   ) + $base;
-  $items['panels/ajax/flexible/resize'] = array(
+  $items['panels/ajax/flexible/resize/%panels_edit_cache'] = array(
     'page callback' => 'panels_ajax_flexible_edit_resize',
   ) + $base;
 }
@@ -230,6 +231,7 @@ function theme_panels_flexible($id, $content, $settings, $display) {
   $renderer->content = $content;
   $renderer->css_id = $id;
   $renderer->did = $display->did;
+  $renderer->cache_key = $display->cache_key;
   $renderer->id_str = $id ? 'id="' . $id . '"' : '';
   $renderer->admin = FALSE;
 
@@ -276,6 +278,7 @@ function theme_panels_flexible_admin($id, $content, $settings, $display) {
   $renderer->content = $content;
   $renderer->css_id = $id;
   $renderer->did = $display->did;
+  $renderer->cache_key = $display->cache_key;
   $renderer->id_str = $id ? 'id="' . $id . '"' : '';
   $renderer->admin = TRUE;
 
@@ -304,7 +307,7 @@ function theme_panels_flexible_admin($id, $content, $settings, $display) {
   $output .= "</div>\n</div>\n";
 
   drupal_add_js(panels_get_path('plugins/layouts/flexible/flexible-admin.js'));
-  drupal_add_js(array('flexible' => array('resize' => url('panels/ajax/flexible/resize/' . $display->did, array('absolute' => TRUE)))), 'setting');
+  drupal_add_js(array('flexible' => array('resize' => url('panels/ajax/flexible/resize/' . $display->cache_key, array('absolute' => TRUE)))), 'setting');
   return $output;
 }
 
@@ -513,28 +516,28 @@ function panels_flexible_render_item_links($renderer, $id, $item) {
   if (!empty($settings)) {
     $links[] = array(
       'title' => $settings,
-      'href' => 'panels/ajax/flexible/settings/' . $renderer->did . '/' . $id,
+      'href' => 'panels/ajax/flexible/settings/' . $renderer->cache_key . '/' . $id,
       'attributes' => array('class' => 'ctools-use-modal'),
     );
   }
   if ($add) {
     $links[] = array(
       'title' => $add,
-      'href' => 'panels/ajax/flexible/add/' . $renderer->did . '/' . $id,
+      'href' => 'panels/ajax/flexible/add/' . $renderer->cache_key . '/' . $id,
       'attributes' => array('class' => 'ctools-use-modal'),
     );
   }
   if (isset($add2)) {
     $links[] = array(
       'title' => $add2,
-      'href' => 'panels/ajax/flexible/add/' . $renderer->did . '/' . $id . '/right',
+      'href' => 'panels/ajax/flexible/add/' . $renderer->cache_key . '/' . $id . '/right',
       'attributes' => array('class' => 'ctools-use-modal'),
     );
   }
   if ($remove) {
     $links[] = array(
       'title' => $remove,
-      'href' => 'panels/ajax/flexible/remove/' . $renderer->did . '/' . $id,
+      'href' => 'panels/ajax/flexible/remove/' . $renderer->cache_key . '/' . $id,
       'attributes' => array('class' => 'ctools-use-ajax'),
     );
   }
@@ -692,16 +695,7 @@ function panels_flexible_get_css_group(&$css, $renderer, $list, $owner_id, $type
 /**
  * AJAX responder to edit flexible settings for an item.
  */
-function panels_ajax_flexible_edit_settings($did, $id) {
-  panels_load_include('plugins');
-  ctools_include('ajax');
-  ctools_include('modal');
-  ctools_include('context');
-
-  if ((!is_numeric($did) && $did != 'new') || !($cache = panels_cache_get('display', $did))) {
-    ctools_modal_render(t('Error'), t('Invalid display id.'));
-  }
-
+function panels_ajax_flexible_edit_settings($cache, $id) {
   $settings = &$cache->display->layout_settings;
   panels_flexible_convert_settings($settings);
 
@@ -739,10 +733,11 @@ function panels_ajax_flexible_edit_settings($did, $id) {
   if (empty($output)) {
     // If the width type changed then other nearby items will have
     // to have their widths adjusted.
-    panels_cache_set('display', $did, $cache);
+    panels_load_include('display-edit');
+    panels_edit_cache_set($cache);
     $output = array();
     // If the item is a region, replace the title.
-    $class = 'panels-flexible-' . $item['type'] . '-' . $did . '-' . $id;
+    $class = 'panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $id;
     if ($item['type'] == 'region') {
       $output[] = ctools_ajax_command_replace(".$class h2.label",
         '<h2 class="label">' . check_plain($item['title']) . '</h2>');
@@ -850,16 +845,9 @@ function panels_flexible_config_item_form_submit(&$form, &$form_state) {
 /**
  * AJAX responder to add a new row, column or region to a flexible layout.
  */
-function panels_ajax_flexible_edit_add($did, $id, $location = 'left') {
-  panels_load_include('plugins');
-  ctools_include('ajax');
+function panels_ajax_flexible_edit_add($cache, $id, $location = 'left') {
   ctools_include('modal');
-  ctools_include('context');
-
-  if ((!is_numeric($did) && $did != 'new') || !($cache = panels_cache_get('display', $did))) {
-    ctools_modal_render(t('Error'), t('Invalid display id.'));
-  }
-
+  ctools_include('ajax');
   $settings = &$cache->display->layout_settings;
   panels_flexible_convert_settings($settings);
 
@@ -925,7 +913,8 @@ function panels_ajax_flexible_edit_add($did, $id, $location = 'left') {
   if (empty($output)) {
     // If the width type changed then other nearby items will have
     // to have their widths adjusted.
-    panels_cache_set('display', $did, $cache);
+    panels_load_include('display-edit');
+    panels_edit_cache_set($cache);
     $output = array();
 
     $css_id = isset($cache->display->css_id) ? $cache->display->css_id : '';
@@ -935,6 +924,7 @@ function panels_ajax_flexible_edit_add($did, $id, $location = 'left') {
     $renderer->content = array();
     $renderer->css_id = $css_id;
     $renderer->did = $cache->display->did;
+    $renderer->cache_key = $cache->display->cache_key;
     $renderer->id_str = $css_id ? 'id="' . $css_id . '"' : '';
     $renderer->admin = TRUE;
 
@@ -943,7 +933,7 @@ function panels_ajax_flexible_edit_add($did, $id, $location = 'left') {
       panels_load_include('display-edit');
       $panel_buttons = panels_edit_panel_get_links($cache->display, $form_state['key']);
 
-      $content = theme('panels_panel_dnd', '', $form_state['key'], $item['title'], $panel_buttons);
+      $content = panels_render_region_dnd('', $form_state['key'], $item['title'], $panel_buttons);
       // Manually add the hidden field that our region uses to store pane info.
       $content .= '<input type="hidden" name="panel[pane][' .
         $form_state['key'] . ']" id="edit-panel-pane-' . $form_state['key'] . '" value="" />';
@@ -954,14 +944,14 @@ function panels_ajax_flexible_edit_add($did, $id, $location = 'left') {
       // so that more stuff can be added inside it as needed.
       foreach (array('left', 'middle', 'right') as $position) {
         if (!empty($content) || $renderer->admin) {
-          $content .= '<div class="panels-flexible-' . $item['type'] . '-' . $did . '-' . $form_state['key'] . '-' . $position . '"></div>';
+          $content .= '<div class="panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $form_state['key'] . '-' . $position . '"></div>';
         }
       }
 
     }
 
     // render the item
-    $parent_class = 'panels-flexible-' . $parent['type'] . '-' . $did . '-' . $id;
+    $parent_class = 'panels-flexible-' . $parent['type'] . '-' . $cache->display->did . '-' . $id;
     $item_output = panels_flexible_render_item($renderer, $item, 'panels-flexible-' . $item['type'], $content, $form_state['key'], 0, 0, $item['type'] == 'row');
 
     // Get all the CSS necessary for the entire row (as width adjustments may
@@ -984,7 +974,7 @@ function panels_ajax_flexible_edit_add($did, $id, $location = 'left') {
           // If we are adding to the right side of the left box, there is
           // a splitter that we have to remove; then we add our box normally,
           // and then add a new splitter for just our guy.
-          $output[] = ctools_ajax_command_remove('panels-flexible-splitter-for-panels-flexible-' . $item['type'] . '-' . $did . '-' . $form_state['key']);
+          $output[] = ctools_ajax_command_remove('panels-flexible-splitter-for-panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $form_state['key']);
           $item_output = panels_flexible_render_splitter($renderer, $form_state['sibling'], $form_state['key']) .  $item_output;
           $item_output .= panels_flexible_render_splitter($renderer, $form_state['key'], NULL);
           $output[] = ctools_ajax_command_append('.' . $parent_class . '-left', $item_output);
@@ -1017,7 +1007,7 @@ function panels_ajax_flexible_edit_add($did, $id, $location = 'left') {
     $output[] = array('command' => 'flexible_fix_height');
 
     if (!empty($form_state['sibling'])) {
-      $sibling_width = '.panels-flexible-' . $item['type'] . '-' . $did . '-' . $form_state['sibling'] . '-width';
+      $sibling_width = '.panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $form_state['sibling'] . '-width';
       $output[] = ctools_ajax_command_html($sibling_width, $settings['items'][$form_state['sibling']]['width']);
     }
     foreach ($css as $selector => $data) {
@@ -1187,15 +1177,7 @@ function panels_flexible_add_item_form_submit(&$form, &$form_state) {
  * AJAX responder to remove an existing row, column or region from a flexible
  * layout.
  */
-function panels_ajax_flexible_edit_remove($did, $id) {
-  panels_load_include('plugins');
-  ctools_include('ajax');
-  ctools_include('context');
-
-  if ((!is_numeric($did) && $did != 'new') || !($cache = panels_cache_get('display', $did))) {
-    ctools_ajax_render_error(t('Invalid display id.'));
-  }
-
+function panels_ajax_flexible_edit_remove($cache, $id) {
   $settings = &$cache->display->layout_settings;
   panels_flexible_convert_settings($settings);
 
@@ -1208,7 +1190,7 @@ function panels_ajax_flexible_edit_remove($did, $id) {
 
   $siblings = &$settings['items'][$item['parent']]['children'];
   $parent_class = '.panels-flexible-' . $settings['items'][$item['parent']]['type'] .
-    '-' . $did . '-' . $item['parent'];
+    '-' . $cache->display->did . '-' . $item['parent'];
 
   // Find the offset of our array. This will also be the key because
   // this is a simple array.
@@ -1243,8 +1225,9 @@ function panels_ajax_flexible_edit_remove($did, $id) {
   unset($settings['items'][$id]);
 
   // Save our new state.
-  panels_cache_set('display', $did, $cache);
-  $class = 'panels-flexible-' . $item['type'] . '-' . $did . '-' . $id;
+  panels_load_include('display-edit');
+  panels_edit_cache_set($cache);
+  $class = 'panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $id;
   $output = array();
 
   $output[] = ctools_ajax_command_remove('.' . $class);
@@ -1256,6 +1239,7 @@ function panels_ajax_flexible_edit_remove($did, $id) {
   $renderer->content = array();
   $renderer->css_id = $css_id;
   $renderer->did = $cache->display->did;
+  $renderer->cache_key = $cache->display->cache_key;
   $renderer->id_str = $css_id ? 'id="' . $css_id . '"' : '';
   $renderer->admin = TRUE;
 
@@ -1272,16 +1256,16 @@ function panels_ajax_flexible_edit_remove($did, $id) {
 
   // There are potentially two splitters linked to this item to be removed.
   if (!empty($prev)) {
-    $output[] = ctools_ajax_command_remove('.flexible-splitter-for-panels-flexible-' . $item['type'] . '-' . $did . '-' . $prev);
+    $output[] = ctools_ajax_command_remove('.flexible-splitter-for-panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $prev);
   }
 
   // Try to remove the 'next' one even if there isn't a $next.
-  $output[] = ctools_ajax_command_remove('.flexible-splitter-for-panels-flexible-' . $item['type'] . '-' . $did . '-' . $id);
+  $output[] = ctools_ajax_command_remove('.flexible-splitter-for-panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $id);
 
   if (!empty($prev) && !empty($next)) {
     // Add a new splitter that links $prev and $next:
     $splitter = panels_flexible_render_splitter($renderer, $prev, $next);
-    $prev_class = '.panels-flexible-' . $item['type'] . '-' . $did . '-' . $prev;
+    $prev_class = '.panels-flexible-' . $item['type'] . '-' . $cache->display->did . '-' . $prev;
     $output[] = ctools_ajax_command_after($prev_class, $splitter);
     // Send our fix height command.
     $output[] = array('command' => 'flexible_fix_height');
@@ -1303,15 +1287,8 @@ function panels_ajax_flexible_edit_remove($did, $id) {
  * AJAX responder to store resize information when the user adjusts the
  * splitter.
  */
-function panels_ajax_flexible_edit_resize($did) {
-  panels_load_include('plugins');
+function panels_ajax_flexible_edit_resize($cache) {
   ctools_include('ajax');
-  ctools_include('context');
-
-  if ((!is_numeric($did) && $did != 'new') || !($cache = panels_cache_get('display', $did))) {
-    ctools_ajax_render_error(t('Invalid display id.'));
-  }
-
   $settings = &$cache->display->layout_settings;
   panels_flexible_convert_settings($settings);
 
@@ -1321,7 +1298,8 @@ function panels_ajax_flexible_edit_resize($did) {
   }
 
   // Save our new state.
-  panels_cache_set('display', $did, $cache);
+  panels_load_include('display-edit');
+  panels_edit_cache_set($cache);
 
   ctools_ajax_render(array('ok'));
 }
