@@ -11,6 +11,7 @@ Panels 6.x-3.0-dev
 #460902 by dmmckenna: Fix problem installing panels from an install profile.
 #488278: Preview on panel nodes prior to creation caused errors.
 #475920: Create "use panels dashboard" permission to more easily control who can and cannot use it.
+#384552: Fix incompatibilities with theme developer. Drag & drop screen does not need to be themable.
 
 Panels 6.x-3.0-beta4
 ====================
